apps/myownradio/myownradio-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myownradio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: myownradio-server
  template:
    metadata:
      labels:
        deployment: myownradio-server
    spec:
      volumes:
        - name: myownradio-server-storage
          persistentVolumeClaim:
            claimName: myownradio-server-storage
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "php-fpm"
            - "backend-php-fpm"
      containers:
        - name: php-fpm
          image: pldin601/myownradio-backend-php:21.12.1598602041-5193b17
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/app/storage"
              name: myownradio-server-storage
        - name: nginx
          image: pldin601/myownradio-backend-nginx:21.12.1598602038-5193b17
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerconfig
