apps/myownradio/myownradio-streamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myownradio-streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: myownradio-streamer
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        deployment: myownradio-streamer
    spec:
      containers:
        - name: streamer
          image: pldin601/myownradio-radio-streamer:21.08.1138736865-3f6875d
      imagePullSecrets:
        - name: dockerconfig
