apps/myownradio/myownradio-mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myownradio-mysql
spec:
  selector:
    deployment: myownradio-mysql-deployment
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
