apps/myownradio/myownradio-external-service.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: myownradio-external-service
subsets:
  - addresses:
      - ip: 192.168.1.200
    ports:
#      - name: http
#        port: 80
      - name: https
        port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: myownradio-external-service
spec:
  ports:
#    - name: http
#      port: 80
#      protocol: TCP
#      targetPort: 80
#      nodePort: 0
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 0
  selector: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myownradio-external-public
  namespace: myownradio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`myownradio.biz`)
      services:
        - kind: Service
          name: myownradio-external-service
          port: https
          scheme: https
  tls:
    certResolver: default
